# WhatTheHealth

./: manage.py  test.rest
src/: .gitignore  db.sqlite3  setup.cfg
src/api/: settings.py
src/what-the-health-env/: pyvenv.cfg
src/what-the-health-env/Scripts/: activate
src/what_the_health/: .gitignore  pyproject.toml  settings.py  urls.py  views.py  wsgi.py
what-the-health-env/Scripts/: activate.bat
